@@ -47,8 +47,12 @@ Bug Fixes
 ---------
 
 * FLAG_NO_STOPLIST and FLAG_NO_ALERTLIST in feature_recorder.h were the same. They are now different.
+
 * FLAG_NO_QUOTE and FLAG_XML in feature_recorder.h were the same . They are different now.
+
 * The split wordlists contained utf8 escaped words, rather than raw data.
+
+* A bug in feature_recorder::unquote_string caused strings containing the sequence \x5C to be improperly decoded. This was caused by a typo in the function hexval (we had a private implementation because mingw had no equivillent function.) The primary impact was that words containing backslashes did not appear in the split wordlist generated by scan_wordlist.
 
 Usability Improvement
 ----------------------
