@@ -9,7 +9,9 @@
 static uint32_t word_min = 6;
 static uint32_t word_max = 14;
 static uint64_t max_word_outfile_size=100*1000*1000;
+static bool wordlist_use_sql = false;
 
+/* Wordlist support for flat files */
 class WordlistSorter {
 public:
     bool operator()(const std::string &a,const std::string &b) {
@@ -18,6 +20,18 @@ public:
 	return a<b;
     }
 };
+#define WORDLIST "wordlist"
+
+/* wordlist support for SQL */
+static const char *schema_wordlist[] = {
+    "CREATE TABLE wordlist (word BLOB)",
+    "CREATE UNIQUE INDEX wordlist_i on wordlist(word)",
+    0};
+
+static const char *insert_statement = "INSERT OR IGNORE INTO wordlist VALUES (?);";
+static feature_recorder::besql_stmt *stmt=0;
+static const char *select_statement = "SELECT DISTINCT word FROM wordlist ORDER BY length(word),word";
+
 
 /* Global variables for writing out wordlist */
 static std::ofstream of2;
@@ -89,9 +103,8 @@ static int callback_printer(void *param, int argc, char **argv, char **azColName
 /* Similar to above; write out the wordlist using SQL */
 static void wordlist_sql_write(BEAPI_SQLITE3 *db3)
 {
-    std::cerr << "*** WORDLIST_SQL_WRITE ***\n";
     char *errmsg = 0;
-    if (sqlite3_exec(db3,"SELECT word FROM wordlist ORDER BY length,word",callback_printer,0,&errmsg)){
+    if (sqlite3_exec(db3,select_statement,callback_printer,0,&errmsg)){
         std::cerr << "sqlite3: " << errmsg << "\n";
     }
     if(of2.is_open()) of2.close();
@@ -110,27 +123,22 @@ static void wordchar_setup()
     }
 }
 
-static const char *schema_wordlist[] = {
-    "CREATE TABLE wordlist (length INTEGER,word BLOB)",
-    "CREATE UNIQUE INDEX wordlist_i on wordlist(word)",
-    0};
-
-
-static feature_recorder::besql_stmt *stmt=0;
-
 extern "C" 
 void scan_wordlist(const class scanner_params &sp,const recursion_control_block &rcb)
 {
     assert(sp.sp_version==scanner_params::CURRENT_SP_VERSION);
     if(sp.phase==scanner_params::PHASE_STARTUP){
         assert(sp.info->si_version==scanner_info::CURRENT_SI_VERSION);
-        sp.info->name  = "wordlist";
+        sp.info->name  = WORDLIST;
         sp.info->flags = scanner_info::SCANNER_DISABLED;
-        sp.info->feature_names.insert("wordlist");
         sp.info->get_config("word_min",&word_min,"Minimum word size");
         sp.info->get_config("word_max",&word_max,"Maximum word size");
         sp.info->get_config("max_word_outfile_size",&max_word_outfile_size,
                             "Maximum size of the words output file");
+        sp.info->get_config("wordlist_use_sql",&wordlist_use_sql,"write wordlist to SQL database");
+        if ( !wordlist_use_sql ){
+            sp.info->feature_names.insert(WORDLIST);
+        }
         if(word_min>word_max){
             fprintf(stderr,"ERROR: word_min=%d word_max=%d\n",word_min,word_max);
             exit(1);
@@ -139,16 +147,18 @@ void scan_wordlist(const class scanner_params &sp,const recursion_control_block 
 	return;
     }
     feature_recorder_set &fs = sp.fs;
-    feature_recorder *wordlist_recorder = fs.get_name("wordlist");
-    if(sp.phase==scanner_params::PHASE_INIT){
-	wordlist_recorder->set_flag(feature_recorder::FLAG_NO_CONTEXT);  // not useful for wordlist
-	wordlist_recorder->set_flag(feature_recorder::FLAG_NO_STOPLIST); // not necessary for wordlist
-	wordlist_recorder->set_flag(feature_recorder::FLAG_NO_ALERTLIST); // not necessary for wordlist
-	wordlist_recorder->set_flag(feature_recorder::FLAG_NO_FEATURES_SQL); // SQL wordlist handled separately.
 
-        if (fs.db3){
+    feature_recorder *wordlist_recorder = (fs.db3 && wordlist_use_sql) ? 0 : fs.get_name(WORDLIST);
+
+    if(sp.phase==scanner_params::PHASE_INIT){
+        if (fs.db3 && wordlist_use_sql){
             fs.db_send_sql(fs.db3,schema_wordlist);
-            stmt = new feature_recorder::besql_stmt(fs.db3,"insert or ignore into wordlist values (?,?);");
+            stmt = new feature_recorder::besql_stmt(fs.db3,insert_statement);
+        } else {
+            wordlist_recorder->set_flag(feature_recorder::FLAG_NO_CONTEXT);  // not useful for wordlist
+            wordlist_recorder->set_flag(feature_recorder::FLAG_NO_STOPLIST); // not necessary for wordlist
+            wordlist_recorder->set_flag(feature_recorder::FLAG_NO_ALERTLIST); // not necessary for wordlist
+            wordlist_recorder->set_flag(feature_recorder::FLAG_NO_FEATURES_SQL); // SQL wordlist handled separately.
         }
         return;
     }
@@ -156,10 +166,10 @@ void scan_wordlist(const class scanner_params &sp,const recursion_control_block 
     if(sp.phase==scanner_params::PHASE_SHUTDOWN){
         std::cout << "Phase 3. Uniquifying and recombining wordlist\n";
         ofn_template = sp.fs.get_outdir()+"/wordlist_split_%03d.txt";
-        if (fs.db3){
+        if (fs.db3 && wordlist_use_sql){
             wordlist_sql_write(fs.db3);
         } else {
-            wordlist_split_and_dedup(sp.fs.get_outdir()+"/wordlist.txt");
+            wordlist_split_and_dedup(sp.fs.get_outdir()+"/" WORDLIST ".txt");
         }
 	return;
     }
@@ -168,26 +178,32 @@ void scan_wordlist(const class scanner_params &sp,const recursion_control_block 
 	const sbuf_t &sbuf = sp.sbuf;
 
 	/* Look for words in the buffer. Runs a finite state machine.
-	 * for each character in the buffer:
+	 * for each character in the buffer. There are only two
+	 * transitions that we care about:
+         *
 	 * case 1 - we are not in a word & this character starts a word.
+         *
 	 * case 2 - we are in a word & this character ends a word.
 	 */
     
 	int wordstart = -1;			// >=0 means we are in a word
 	for(u_int i=0; i<sbuf.pagesize; i++){
 
-	    /* case 1 */
+	    /* case 1 - we are not in a word & this character starts a word. */
 	    bool iswordchar = wordchar[sbuf.buf[i]];
 	    if(wordstart<0 && iswordchar && i!=sbuf.pagesize-1){
 		wordstart = i;
 		continue;
 	    }
+            /* case 2 - we are in a word & this character ends a word. */
 	    if(wordstart>=0 && (!iswordchar || i==sbuf.pagesize-1)){
 		uint32_t len = i-wordstart;
 		if((word_min <= len) && (len <=  word_max)){
-                    if(fs.db3){
-                        sqlite3_bind_int(stmt->stmt, 1, len);
-                        sqlite3_bind_text(stmt->stmt, 2, (const char *)sbuf.buf+wordstart, len, SQLITE_STATIC);
+
+                    /* Save the word that starts at sbuf.buf+wordstart that has a length of len. */
+                    
+                    if(fs.db3 && wordlist_use_sql){
+                        sqlite3_bind_blob(stmt->stmt, 1, (const char *)sbuf.buf+wordstart, len, SQLITE_STATIC);
                         if (sqlite3_step(stmt->stmt) != SQLITE_DONE) {
                             fprintf(stderr,"sqlite3_step failed on scan_wordlist\n");
                         }
